<resources>
    <string name="app_name">Findate</string>

    <!-- Menu String -->
    <string name="menu_action_login_text">Log in</string>
    <string name="menu_action_signup_text">Sign up</string>
    <string name="menu_action_logout_text">Log out</string>
    <string name="menu_action_setting_text">Setting</string>

    <!-- Log in -->
    <string name="hint_password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_signup">Not a member? Sign up now!</string>

    <!-- Sign up -->
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="repassword">Confirm your password</string>
    <string name="yourname">Enter your name</string>
    <string name="gender">Your gender</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="pass_warning">Password must contains 8-20 characters, at least 1 uppercase,
        1 digit, and 1 special character</string>

    <!-- Verification -->
    <string name="verification_title">Email Verification</string>
    <string name="verification_mess_1">Registered successfully.</string>
    <string name="verification_mess_2"> Please check your email for verification.</string>

    <!-- Reset Password -->
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_content">Please input your email to reset your account password</string>
    <string name="reset_password_button">Reset Password</string>

    <!-- bottom navigation -->
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_find">Find</string>
    <string name="bottom_nav_message">Message</string>

    <!-- profile -->
    <string name="btn_profile_logout">Log Out</string>
    <string name="btn_profile_deleteaccount">Delete Account</string>

    <!-- Setting -->
    <string name="setting_show_me">Show me</string>
    <string name="setting_male">Male</string>
    <string name="setting_female">Female</string>
    <string name="setting_age">Age</string>
    <string name="setting_min_age">13</string>
    <string name="setting_max_age">60</string>
    <string name="setting_show_me_public">Show me on Findate</string>
    <string name="setting_block_list">Block list</string>
    <string name="setting_btn_set_block_set">SET</string>
    <string name="setting_show_image_public">Show image on Findate</string>
    <string name="setting_btn_set_image_public">SET</string>
    <string name="setting_share_my_feed">Share my feed</string>
    <string name="setting_btn_share">SHARE</string>

    <!-- Edit Info -->
    <string name="edit_info_about">About you</string>
    <string name="edit_info_name">Your name</string>
    <string name="edit_info_birth">Your birthday</string>
    <string name="edit_info_phone">Phone number</string>
    <string name="edit_info_job_title">Job title</string>
    <string name="edit_info_school">School/Company</string>
    <string name="btn_edit_info_update">Update</string>
    <string name="btn_edit_info_cancel">Cancel</string>

    <!-- Message -->
    <string name="message_search">Search</string>
    <string name="message_title">Message</string>


    <!-- Set date -->
    <string name="set_date">Date</string>
    <string name="set_place">Place</string>
    <string name="set_message">Message</string>
</resources>
