<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    android:orientation="vertical"
    tools:context=".Activities.Authentication.ResetPassActivity">


    <ProgressBar
        android:id="@+id/resetPass_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_reset_pass_title"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/reset_password_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_reset_pass_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reset_password_content"
        android:textColor="@color/white"
        android:textSize="14dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/ed_reset_pass_email"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/edittext"
        android:maxLines="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reset_password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/reset_password_button"
        android:background="@drawable/button"/>
</LinearLayout>