<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/animation_list"
    tools:context=".Activities.Authentication.VerificationActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_verification"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/verification_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_message_verification_1"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/verification_mess_1"
        android:textColor="@color/white"
        android:textSize="14dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_message_verification_2"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/verification_mess_2"
        android:textColor="@color/white"
        android:textSize="14dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_time_count_show"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="60"
        android:textSize="70dp"
        android:textColor="@color/white"
        android:textStyle="normal"/>

    <ProgressBar
        android:id="@+id/progressBar_verification"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="60"
        android:minHeight="50dp"
        android:minWidth="400dp"
        android:progress="0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_resend_verification"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:text="Resend"/>


</LinearLayout>