<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Functionality.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/border_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_showMe"
                android:text="@string/setting_show_me"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_male"
                android:layout_below="@+id/tv_setting_showMe"
                android:text="@string/setting_male"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_feman"
                android:layout_below="@+id/tv_setting_male"
                android:text="@string/setting_female"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.polyak.iconswitch.IconSwitch
                android:id="@+id/icon_switch_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_setting_showMe"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="30dp"
                app:isw_icon_size="10dp"
                app:isw_icon_left="@drawable/ic_no"
                app:isw_icon_right="@drawable/ic_yes"
                app:isw_inactive_tint_icon_left="@color/white"
                app:isw_inactive_tint_icon_right="@color/white"
                app:isw_active_tint_icon_left="@color/white"
                app:isw_active_tint_icon_right="@color/white"
                app:isw_thumb_color_left="@color/electron_blue"
                app:isw_thumb_color_right="@color/electron_blue"
                app:isw_background_color="@color/black"
                android:layout_toRightOf="@+id/tv_gender"
                android:layout_marginLeft="150dp" />

            <com.polyak.iconswitch.IconSwitch
                android:id="@+id/icon_switch_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_setting_male"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="30dp"
                app:isw_icon_size="10dp"
                app:isw_icon_left="@drawable/ic_no"
                app:isw_icon_right="@drawable/ic_yes"
                app:isw_inactive_tint_icon_left="@color/white"
                app:isw_inactive_tint_icon_right="@color/white"
                app:isw_active_tint_icon_left="@color/white"
                app:isw_active_tint_icon_right="@color/white"
                app:isw_thumb_color_left="@color/prunus_avium"
                app:isw_thumb_color_right="@color/prunus_avium"
                app:isw_background_color="@color/black"
                android:layout_toRightOf="@+id/tv_gender"
                android:layout_marginLeft="150dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@drawable/border_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_maximumDistance"
                android:text="@string/setting_max_distance"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_number"
                android:text="@string/setting_number"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="50dp"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_mile"
                android:text="@string/setting_mile"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="30dp"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <SeekBar
                android:id="@+id/icon_seekbar_max_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_setting_maximumDistance"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:max="100"
                android:progress="50"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@drawable/border_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_show_me_public"
                android:text="@string/setting_show_me_public"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.polyak.iconswitch.IconSwitch
                android:id="@+id/icon_switch_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:isw_icon_size="10dp"
                app:isw_icon_left="@drawable/ic_no"
                app:isw_icon_right="@drawable/ic_yes"
                app:isw_inactive_tint_icon_left="@color/white"
                app:isw_inactive_tint_icon_right="@color/white"
                app:isw_active_tint_icon_left="@color/white"
                app:isw_active_tint_icon_right="@color/white"
                app:isw_thumb_color_left="@color/prunus_avium"
                app:isw_thumb_color_right="@color/prunus_avium"
                app:isw_background_color="@color/black"
                android:layout_toRightOf="@+id/tv_gender"
                android:layout_marginLeft="150dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@drawable/border_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_block_list"
                android:text="@string/setting_block_list"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:id="@+id/btn_set_block_list"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorAccent"
                android:text="@string/setting_btn_set_block_set"
                android:textSize="18dp"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@drawable/border_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_show_image_public"
                android:text="@string/setting_show_image_public"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:id="@+id/btn_set_image_public"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorAccent"
                android:text="@string/setting_btn_set_image_public"
                android:textSize="18dp"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="@drawable/border_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_setting_share_my_feed"
                android:text="@string/setting_share_my_feed"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Button
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:id="@+id/btn_share_feed"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorAccent"
                android:text="@string/setting_btn_share"
                android:textSize="18dp"
                android:textColor="@color/white"/>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>